# scrambledConvolution

./: LICENSE  README.md  pyproject.toml  scrambledConvolution_demo.ipynb
src/: activations.py
src/layers/: convolutional.py
src/scrambledConv/: __init__.py  network.py
src/scrambledConv/datasets/: mnist.npz  mnist_loader.py
src/scrambledConv/layers/: __init__.py  dense.py  layer.py  pooling.py  reshape.py
src/scrambledConvolution/: losses.py  network.py
src/scrambledConvolution/datasets/: __init__.py  one_hot.py
src/scrambledConvolution/layers/: __init__.py  convolutional.py  dense.py  pooling.py
