[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "scrambledConvolution"
version = "0.0.1"
dependencies = [
    "numpy>=1.21",
    "numba>=0.59.1"
]
authors = [{name="Till Vogt", email="till_vogt@gmx.net"}]
description = "A CNN framework for adjusting basic operations of convolutional layers"
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Environment :: Console",
    "Topic :: Scientific/Engineering :: Artificial Intelligence"
]

[tool.hatch.build.targets.wheel]
packages = ["src/scrambledConvolution/"]
